# micro-service

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt
libs/: build_dependencies.sh
source/: main.cpp  microsvc_controller.cpp  microsvc_controller.hpp  rest_service_controller.cpp  rest_service_controller.hpp  user_manager.cpp  user_manager.hpp
source/foundation/: basic_controller.cpp  network_utils.cpp
source/foundation/include/: basic_controller.hpp  controller.hpp  network_utils.hpp  runtime_utils.hpp  std_micro_service.hpp  usr_interrupt_handler.hpp
source/request_handlers/: request_handler.cpp  request_handler.h
tests/wrk/: benchmark_microsvc.lua  benchmark_microsvc_POST.lua
